--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,14 @@
 a {
-  color: #11999E;
+  color: #11999e;
 }
 
 body {
   margin: 0;
   text-align: center;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 .bottom-container {
-
 }
 
 .bottom-cloud {
@@ -24,9 +23,9 @@ body {
 
 h1 {
   margin: 35px auto 0px auto;
-  font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
   font-size: 550%;
-  color: #66BFBF;
+  color: #66bfbf;
   line-height: 2;
   /* width: 10%;
   margin: 0 auto; */
@@ -36,21 +35,21 @@ h1 {
 
 h2 {
   font-weight: normal;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
-  color: #66BFBF;
+  color: #66bfbf;
 }
 
 h3 {
-  font-family: 'Montserrat', sans-serif;
-  color: #11999E;
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
 }
 
-#left-skill{
+#left-skill {
   text-align: left;
 }
 
-#right-skill{
+#right-skill {
   text-align: right;
 }
 
@@ -66,7 +65,8 @@ h3 {
   line-height: 2;
 }
 
-.profile-picture {}
+.profile-picture {
+}
 
 .top-cloud {
   position: absolute;
@@ -85,7 +85,7 @@ h3 {
 }
 
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #212439;
   position: relative;
   padding-top: 100px;
 }
